# eeg-filtering

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: 2024.01.17-13.45.38.269.edf  ANMR002.mp4.csv  ANMR002.mp4.json  ANMR002.mp4_old.csv
notebooks/: playground.ipynb
src/: demo.ipynb  enums.py  main.py
src/eeg/: default.py  filtering.py  io.py
src/video/: mediapipe1.py
