[tool.poetry]
name = "eeg-artifact-filtering"
version = "0.1.0"
description = ""
authors = ["Andrey Shataev <shatandv@gmail.com>"]
readme = "README.md"
packages = [{include = "eeg_artifact_filtering", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mne = "^1.6.0"
ipykernel = "^6.27.1"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
numpy = "^1.26.3"
seaborn = "^0.13.1"
tqdm = "^4.66.1"
ipython = "^8.20.0"
scikit-learn = "^1.3.2"
miceforest = "^5.7.0"
fancyimpute = "^0.7.0"
xgboost = "^2.0.3"
catboost = "^1.2.2"
dash = "^2.14.2"
streamlit = "^1.30.0"
plotly = "^5.18.0"
statsmodels = "^0.14.1"
opencv-python = "^4.9.0.80"
mediapipe = "^0.10.9"
edflib-python = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
